--- a/web/data.pug
+++ b/web/data.pug
@@ -33,4 +33,40 @@ script
         pertanyaan: "Ilmu non-syariah kalau dipelajari dapat pahala?"
         kategori: "ibadah"
       }
+      {
+        pertanyaan: "Apa bahasa inggrisnya dia?"
+        kategori: "bahasa"
+      }
+      {
+        pertanyaan: "Negara miskin krisis ekonomi akan hancur?"
+        kategori: "keuangan"
+      }
+      {
+        pertanyaan: "Adakah negara yang krisis ekonomi lama?"
+        kategori: "keuangan"
+      }
+      {
+        pertanyaan: "Gimana kalau bertahun-tahun belum bayar utang puasa?"
+        kategori: "ibadah"
+      }
+      {
+        pertanyaan: "Apa itu kapitalis dan marxis?"
+        kategori: "ideologi"
+      }
+      {
+        pertanyaan: "Apa itu investasi?"
+        kategori: "keuangan"
+      }
+      {
+        pertanyaan: "Apa itu filsafat?"
+        kategori: "ideologi"
+      }
+      {
+        pertanyaan: "Kenapa Quran nggak bahasa Indonesia?"
+        kategori: "bahasa"
+      }
+      {
+        pertanyaan: "Apa itu sekuler?"
+        kategori: "ideologi"
+      }
     ]
